--- a/public/pdf.css
+++ b/public/pdf.css
@@ -91,10 +91,9 @@ section {
   background-repeat: no-repeat;
   background-position: right center;
   position: relative;
-  width: 100%;
+  width: auto;
   display: flex;
   flex-direction: column;
-  height: 100%;
   height: 2485px;
 }
 
